@@ -4,8 +4,7 @@
 #include <vector>
 
 
-template<typename T>
-concept Foo = std::ranges::input_range<T>;
+template<typename T> concept Foo = std::ranges::input_range<T>;
 
 
 template<Foo F> auto foo(F const &r)
