@@ -107,9 +107,8 @@ using value_type = decltype(*std::begin(std::declval<CONTAINER>()));
 #if defined(PQXX_HAVE_CONCEPTS)
 /// Concept: Any type that we can read as a string of @c char.
 template<typename STRING>
-concept char_string = std::ranges::contiguous_range<STRING> and
-                      std::same_as < strip_t<value_type<STRING>>,
-char > ;
+concept char_string = std::ranges::contiguous_range<STRING>
+  and std::same_as<strip_t<value_type<STRING>>, char>;
 
 /// Concept: Anything we can iterate to get things we can read as strings.
 template<typename RANGE>
@@ -119,7 +118,7 @@ concept char_strings =
 /// Concept: Anything we might want to treat as binary data.
 template<typename DATA>
 concept potential_binary = std::ranges::contiguous_range<DATA> and
-  (sizeof(value_type<DATA>) == 1);
+                           (sizeof(value_type<DATA>) == 1);
 #endif // PQXX_HAVE_CONCEPTS
 
 
