@@ -5,6 +5,7 @@
  - Fix warnings about `[[likely]]` in `if constexpr`.  (#475)
  - Clearer error for ambiguous string conversion of `char` type.  (#481)
  - Pseudo-statement in `prepare()` error was for the wrong statement.  (#488)
+ - New class, `connecting` for nonblocking connection to the database.  (#487)
 7.6.0
  - Removed bad string conversion to `std::basic_string_view<std::byte>`. (#463)
  - Add C++20 concepts: `binary`, `char_string`, `char_strings`.
